<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.totexpo.shome.Shome">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView1"
        android:id="@+id/textView1"
        android:textSize="30dp"
        android:textColor="#ff000000"
        android:width="700dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView2"
        android:id="@+id/textView2"
        android:textColor="#ffff0513"
        android:textSize="25dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/button1"
        android:layout_alignStart="@+id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:onClick="onClick1"
        android:textSize="25dp"
        android:paddingBottom="0dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:onClick="onClick2"
        android:textSize="20dp"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:onClick="onClick3"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView3"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:textIsSelectable="true"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTexts"
        android:width="300dp"
        android:text="@string/editTexts"
        android:textSize="15dp"
        android:inputType="text"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginBottom="37dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:hint="@string/textView5"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#ff121dff"
        android:textColorHint="#ff0610ff"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:hint="@string/textView6"
        android:textSize="30dp"
        android:textColor="#ff059f0e"
        android:textColorHint="#ff0ecd0b"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_data"
        android:id="@+id/tv_data"
        android:autoText="false"
        android:enabled="false"
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
